[package]
name = "location_error"
description = "A small library for adding source code locations to anyhow errors"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }

[dev-dependencies]
serde_json = { version = "1" }

